packages/cbl_flutter_apple/Frameworks/CouchbaseLite.xcframework/ios-arm64_armv7/CouchbaseLite.framework/Headers/CBLQuery.h

/** \name  Query objects
    @{ */

/** Creates a new query by compiling the input string.
    This is fast, but not instantaneous. If you need to run the same query many times, keep the
    \ref CBLQuery around instead of compiling it each time. If you need to run related queries
    with only some values different, create one query with placeholder parameter(s), and substitute
    the desired value(s) with \ref CBLQuery_SetParameters each time you run the query.
    @note  You must release the \ref CBLQuery when you're finished with it.
    @param db  The database to query.
    @param language  The query language,
            [JSON](https://github.com/couchbase/couchbase-lite-core/wiki/JSON-Query-Schema) or
            [N1QL](https://docs.couchbase.com/server/4.0/n1ql/n1ql-language-reference/index.html).
    @param queryString  The query string.
    @param outErrorPos  If non-NULL, then on a parse error the approximate byte offset in the
                    input expression will be stored here (or -1 if not known/applicable.)
    @param error  On failure, the error will be written here.
    @return  The new query object. */
_cbl_warn_unused
CBLQuery* CBLQuery_New(const CBLDatabase* db _cbl_nonnull,
                       CBLQueryLanguage language,
                       const char *queryString _cbl_nonnull,
                       int *outErrorPos,
                       CBLError* error) CBLAPI;
/** Assigns values to the query's parameters.
    These values will be substited for those parameters whenever the query is executed,
    until they are next assigned.

    Parameters are specified in the query source as
    e.g. `$PARAM` (N1QL) or `["$PARAM"]` (JSON). In this example, the `parameters` dictionary
    to this call should have a key `PARAM` that maps to the value of the parameter.
    @param query  The query.
    @param parameters  The parameters in the form of a Fleece \ref FLDict "dictionary" whose
            keys are the parameter names. (It's easiest to construct this by using the mutable
            API, i.e. calling \ref FLMutableDict_New and adding keys/values.) */
void CBLQuery_SetParameters(CBLQuery* _cbl_nonnull query,
                            FLDict parameters) CBLAPI;
/** Returns the query's current parameter bindings, if any. */
FLDict CBLQuery_Parameters(const CBLQuery* _cbl_nonnull query) CBLAPI;
/** Runs the query, returning the results.
    To obtain the results you'll typically call \ref CBLResultSet_Next in a `while` loop,
    examining the values in the \ref CBLResultSet each time around.
    @note  You must release the result set when you're finished with it. */
_cbl_warn_unused
CBLResultSet* CBLQuery_Execute(CBLQuery* _cbl_nonnull, CBLError*) CBLAPI;
/** Returns the number of columns in each result. */
unsigned CBLQuery_ColumnCount(const CBLQuery* _cbl_nonnull) CBLAPI;
/** @} */



/** \name  Result sets
    @{
    A `CBLResultSet` is an iterator over the results returned by a query. It exposes one
    result at a time -- as a collection of values indexed either by position or by name --
    and can be stepped from one result to the next.

    It's important to note that the initial position of the iterator is _before_ the first
    result, so \ref CBLResultSet_Next must be called _first_. Example:

    ```
    CBLResultSet *rs = CBLQuery_Execute(query, &error);
    assert(rs);
    while (CBLResultSet_Next(rs) {
        FLValue aValue = CBLResultSet_ValueAtIndex(rs, 0);
        ...
    }
    CBLResultSet_Release(rs);
    ```
 */

/** Moves the result-set iterator to the next result.
    Returns false if there are no more results.
    @warning This must be called _before_ examining the first result. */
_cbl_warn_unused
bool CBLResultSet_Next(CBLResultSet* _cbl_nonnull) CBLAPI;
/** Returns the value of a column of the current result, given its (zero-based) numeric index.
    This may return a NULL pointer, indicating `MISSING`, if the value doesn't exist, e.g. if
    the column is a property that doesn't exist in the document. */
FLValue CBLResultSet_ValueAtIndex(const CBLResultSet* _cbl_nonnull,
                                  unsigned index) CBLAPI;
/** Returns the value of a column of the current result, given its name.
    This may return a NULL pointer, indicating `MISSING`, if the value doesn't exist, e.g. if
    the column is a property that doesn't exist in the document. (Or, of course, if the key
    is not a column name in this query.)
    @note  See \ref CBLQuery_ColumnName for a discussion of column names. */
FLValue CBLResultSet_ValueForKey(const CBLResultSet* _cbl_nonnull,
                                 const char* key _cbl_nonnull) CBLAPI;
/** Returns the current result as an array of column values.
    @warning The array reference is only valid until the result-set is advanced or released.
            If you want to keep it for longer, call \ref FLArray_Retain (and release it when done.) */
FLArray CBLResultSet_RowArray(const CBLResultSet* _cbl_nonnull) CBLAPI;
/** Returns the current result as a dictionary mapping column names to values.
    @warning The dict reference is only valid until the result-set is advanced or released.
            If you want to keep it for longer, call \ref FLDict_Retain (and release it when done.) */
FLDict CBLResultSet_RowDict(const CBLResultSet* _cbl_nonnull) CBLAPI;
/** Returns the Query that created this ResultSet. */
CBLQuery* CBLResultSet_GetQuery(const CBLResultSet *rs _cbl_nonnull) CBLAPI;
/** Returns the query's _entire_ current result set, after it's been announced via a call to the
    listener's callback.
    @note  You must release the result set when you're finished with it.
    @param query  The query being listened to.
    @param listener  The query listener that was notified.
    @param error  If the query failed to run, the error will be stored here.
    @return  A new object containing the query's current results, or NULL if the query failed to run. */
    CBLResultSet* CBLQuery_CopyCurrentResults(const CBLQuery* query _cbl_nonnull,
                                              CBLListenerToken *listener _cbl_nonnull,
                                              CBLError *error) CBLAPI;