cbl-dart/src/CBLDart.h

// -- Query

CBLDART_EXPORT
void CBLDart_CBLQuery_Explain(const CBLQuery *query, CBLDart_FLSlice *result);
CBLDART_EXPORT
void CBLDart_CBLQuery_ColumnName(const CBLQuery *query, unsigned columnIndex,
                                 CBLDart_FLSlice *result);
CBLDART_EXPORT
CBLListenerToken *CBLDart_CBLQuery_AddChangeListener(CBLQuery *query,
                                                     CallbackId listener);